--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -12,6 +12,16 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="right-sidebar is-preload">
+
+<iframe 
+  src="https://www.construct.net/en/free-online-games/pixel-speedrun-2363/play" 
+  width="800" 
+  height="600" 
+  frameborder="0" 
+  allowfullscreen>
+</iframe>
+
+		
 		<div id="page-wrapper">
 
 			<!-- Header -->
