--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -14,12 +14,13 @@
 	<body class="right-sidebar is-preload">
 
 <iframe 
-  src="https://www.construct.net/en/free-online-games/pixel-speedrun-2363/play" 
+  src="pixel-speedrun/index.html" 
   width="800" 
   height="600" 
   frameborder="0" 
   allowfullscreen>
 </iframe>
+
 
 		
 		<div id="page-wrapper">
