--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -13,13 +13,9 @@
 	</head>
 	<body class="right-sidebar is-preload">
 
-<iframe 
-  src="pixel-speedrun/index.html" 
-  width="800" 
-  height="600" 
-  frameborder="0" 
-  allowfullscreen>
-</iframe>
+<a href="https://www.construct.net/en/free-online-games/pixel-speedrun-2363/play" target="_blank">
+  Play Pixel Speedrun
+</a>
 
 
 		
