--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -13,12 +13,12 @@
 	</head>
 	<body class="right-sidebar is-preload">
 
-<a href="https://www.construct.net/en/free-online-games/pixel-speedrun-2363/play" target="_blank">
-  Play Pixel Speedrun
-</a>
+<iframe width="1350" height="600" allow="fullscreen; autoplay; encrypted-media"
+	src="https://games.construct.net/2363/latest" frameborder="0" allowfullscreen="true" msallowfullscreen="true" 
+mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="false" referrerpolicy="unsafe-url" sandbox="allow-same-origin allow-forms allow-scripts allow-pointer-lock allow-orientation-lock allow-popups" 
+scrolling="no"></iframe>
 
-
-		
+	
 		<div id="page-wrapper">
 
 			<!-- Header -->
