--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Escape Velocity by HTML5 UP</title>
+		<title>Games - Escape Velocity by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@ scrolling="no"></iframe>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li class="current"><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li class="current"><a href="right-sidebar.html">Games</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
@@ -63,7 +63,7 @@ scrolling="no"></iframe>
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Right Sidebar</div>
+					<div class="title">Games</div>
 					<div class="container">
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
