--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -18,6 +18,13 @@
 mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="false" referrerpolicy="unsafe-url" sandbox="allow-same-origin allow-forms allow-scripts allow-pointer-lock allow-orientation-lock allow-popups" 
 scrolling="no"></iframe>
 
+
+<a href="https://games.construct.net/2363/latest" target="_blank" rel="noopener noreferrer">
+  Pixel Speedrun
+</a> 
+
+
+
 	
 		<div id="page-wrapper">
 
