--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -19,7 +19,7 @@ mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="fals
 scrolling="no"></iframe>
 
 
-<a href="https://games.construct.net/2363/latest" target="_blank" rel="noopener noreferrer">
+<a href="#" onclick="window.open('about:blank').location.href='https://games.construct.net/2363/latest'; return false;">
   Pixel Speedrun
 </a> 
 
