--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -19,9 +19,9 @@ mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="fals
 scrolling="no"></iframe>
 
 
-<a href="#" onclick="window.open('about:blank').location.href='https://games.construct.net/2363/latest'; return false;">
+<a href="https://games.construct.net/2363/latest" target="_blank" rel="noopener noreferrer">
   Pixel Speedrun
-</a> 
+</a>
 
 
 
