--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -18,7 +18,7 @@
 mozallowfullscreen="true" webkitallowfullscreen="true" allowpaymentrequest="false" referrerpolicy="unsafe-url" sandbox="allow-same-origin allow-forms allow-scripts allow-pointer-lock allow-orientation-lock allow-popups" 
 scrolling="no"></iframe>
 
-<a href="game.html" target="_blank">Play Pixel Speedrun</a>
+<a href="pixel-speedrun.html" target="_blank">Play Pixel Speedrun</a>
 
 
 
