--- a/games.html
+++ b/games.html
@@ -28,8 +28,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">Unblocked Games</a></h1>
+							<p>A free game website that has all of the best games!</p>
 						</div>
 
 					<!-- Nav -->
