--- a/slope.html
+++ b/slope.html
@@ -20,9 +20,9 @@
 </head>
 <body>
   <iframe 
-    src="https://www.bubbleshooter.net/embed.php?id=460" 
-    allowfullscreen 
-    scrolling="no">
+    src="https://m360yt.github.io/Unblocked-67/games/slope/" 
+    scrolling="no" 
+    allowfullscreen>
   </iframe>
 </body>
 </html>
