--- a/games.html
+++ b/games.html
@@ -81,6 +81,7 @@
 												<img src="images/pic01.jpg" alt="" />
 											</a>
 											<p><a href="pixel-speedrun.html" target="_blank">Play Pixel Speedrun</a> </p>
+<p><a href="slope.html" target="_blank">Slope</a> </p>
 										</article>
 										<div class="row gtr-150">
 											<div class="col-6 col-12-small">
