Add links for Pixel Speedrun 2
Added links to 'Pixel Speedrun 2' and its Greenfoot page.

--- a/games.html
+++ b/games.html
@@ -80,8 +80,10 @@
 											<a href="#" class="image featured">
 												<img src="images/pic01.jpg" alt="" />
 											</a>
-											<p><a href="pixel-speedrun.html" target="_blank">Play Pixel Speedrun</a> </p>
+											<p><a href="pixel-speedrun.html" target="_blank">Pixel Speedrun</a> </p>
 <p><a href="slope.html" target="_blank">Slope</a> </p>
+											<p><a href="pixel-speedrun2.html" target="_blank">Pixel Speedrun 2 Embeded</a> </p>
+											<p><a href="https://www.greenfoot.org/scenarios/35690" target="_blank">Pixel Speedrun 2 on Greenfoot</a> </p>
 										</article>
 										<div class="row gtr-150">
 											<div class="col-6 col-12-small">
@@ -322,3 +324,4 @@
 
 	</body>
 </html>
+
